--- a/client/index.html
+++ b/client/index.html
@@ -29,13 +29,11 @@
             </div>
 
             <div id="navbarExampleTransparentExample" class="navbar-menu">
-                <div class="navbar-start">
-                </div>
                 <div class="navbar-end">
                     <div class="navbar-item">
                         <div class="field is-grouped">
                             <p class="control">
-                                Welcome {{name}}
+                                Welcome, {{name}}
                             </p>
 
                             <p class="control">
@@ -58,6 +56,7 @@
                         Plan What To Do
                     </h2>
                 </div>
+                
             </div>
         </section>
 
@@ -103,7 +102,7 @@
                     </table>
                 </div>
                 <div class="column">
-                    <p class="subtitle is-4">Overdue</p>
+                    <p class="subtitle is-4">OVERDUE</p>
                     <table class="table is-striped">
                         <thead>
                             <tr>
